# rtpCapture

./: .gitignore  CMakeLists.txt  CaptureCenter.cpp  CaptureCenter.h  Header.h  RTPCaptureSDK.cpp  RTPCaptureSDK.h  RTPDump.cpp  RTPDump.h  RTPHandler.cpp  RTPHandler.h  ReceiverCenter.cpp  ReceiverCenter.h  UDPServer.cpp  UDPServer.h  archive.sh  build.sh  configure.sh  main.cpp
cdemo/: Makefile
cdemo/src/: main.c
demo/cmake/: CMakeLists.txt
demo/src/: main.cpp
doc/: sdk开发手册.docx
sdk/: CMakeLists.txt
src/: CaptureCenter.cpp  Header.h  RTPCapture.cpp  RTPCapture.h  RTPCaptureSDK.cpp  RTPCaptureSDK.h  RTPDump.cpp  RTPDump.h  RTPHandler.cpp  RTPHandler.h  ReceiverCenter.cpp  ReceiverCenter.h
test/: Untitled Diagram.drawio
test/rtpSender/: CMakeLists.txt  main.cpp
vs2013/: main.cpp  rtpCapture.sln  rtpCapture.vcxproj  rtpCapture.vcxproj.filters
